1.3.14
	+ Bugfix: assure cache is disabled when using a localhost
	server. This is neccesary or otherwise we will be bitten for
	roundcube check new email bug
1.3.13
	+ Change menu name to keep folder open
	+ Added support for 'markasjunk' plugin
	+ Hidden external server configuration until it works for more cases
	+ Bugfix: added disableCache option to operation mode field
1.3.12
	+ Fix titles and headers
1.3.10
	+ First release